# AdventofCode2021

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yaml
src/AoC2021/: utils.py
src/AoC2021/data/: day4.txt
src/AoC2021/solutions/: day1.py  day2.py  day3.py  day4.py
tests/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_utils.py  utils.py
