[metadata]
name = AoC2021
description = solves Advent of Code 2021
author = mymoomin
license = MIT
license_file = LICENCE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages =
    find:
install_requires =
    numpy>=1
python_requires = >=3.9
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
AoC2021 = py.typed

[flake8]
max-line-length = 88
extend-ignore = E203